-
Bug
-
Resolution: Done
-
P0: Blocker
-
5.12
-
None
-
-
69359ed4e500081d39bdc0436afa1f7e5f8fdd9d
https://codereview.qt-project.org/#/c/239806/ Update submodules on '5.12' in qt5 PS1 with other 3 changes
https://testresults.qt.io/coin/integration/qt/qt5/tasks/1537263583
agent:2018/09/14 02:44:15 build.go:193: /home/qt/work/qt/qtquickcontrols2/tests/auto/controls/default/target_wrapper.sh ./tst_default -o /home/qt/work/testresults/tests/auto/controls/default635380209,xml -o -,txt agent:2018/09/14 02:44:15 build.go:193: ********* Start testing of tst_controls::Default ********* agent:2018/09/14 02:44:15 build.go:193: Config: Using QtTest library 5.12.0, Qt 5.12.0 (x86_64-little_endian-lp64 shared (dynamic) debug build; by GCC 8.2.0) agent:2018/09/14 02:44:15 build.go:193: PASS : tst_controls::Default::AbstractButton::initTestCase() ... agent:2018/09/14 02:45:00 build.go:193: PASS : tst_controls::Default::SwipeDelegate::test_delegateWidth() agent:2018/09/14 02:45:00 build.go:193: QWARN : tst_controls::Default::SwipeDelegate::test_display() Previously registered enum will be overwritten due to name clash: QQuickSwipeDelegate.Left agent:2018/09/14 02:45:00 build.go:193: Makefile:326: recipe for target 'check' failed agent:2018/09/14 02:45:00 build.go:193: make: *** [check] Segmentation fault (core dumped) agent:2018/09/14 02:45:00 build.go:237: Process finished with error: exit status 2 agent:2018/09/14 02:45:00 build.go:196: Error reading from stdout/err: exit status 2 ...
| For Gerrit Dashboard: QTBUG-70547 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 239992,2 | Check for nullptr in enum conflict analysis | 5.12 | qt/qtdeclarative | Status: MERGED | +2 | 0 |