Check for nullptr in enum conflict analysis

Task-number: QTBUG-70547
Change-Id: Idc0c20d3aee354366daefc99e10eec74065bf579
Reviewed-by: Simon Hausmann <simon.hausmann@qt.io>
Reviewed-by: Liang Qi <liang.qi@qt.io>